--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,315 +98,204 @@ jobs:
           paths: [backend/node_modules]
           key: backend-deps
 
-  test-frontend:
+   test-frontend:
     docker:
-      - image: cimg/node:13.8.0
+      # Docker image here
     steps:
-      - checkout
-      - restore_cache:
-          keys: [frontend-deps]
-      - run:
-          name: Front-end Unit Test
-          command: |
-            cd frontend
-            npm install
-            npm test
+      # Checkout code from git
+      # Restore from cache
+      # Your job code here
+                
   test-backend:
     docker:
-      - image: cimg/node:13.8.0
+      # Docker image here
     steps:
-      - checkout
-      - restore_cache:
-          keys: [backend-deps]
-      - run:
-          name: Back-end Unit Test
-          command: |
-            cd backend
-            npm install
-            npm test
+      # Checkout code from git
+      # Restore from cache
+      # Your job code here
+            
   scan-frontend:
     docker:
-      - image: cimg/node:13.8.0
+      # Docker image here
     steps:
-      - checkout
-      - restore_cache:
-          keys: [frontend-deps]
-      - run:
-          name: Front-end Scan
-          command: |
-            cd frontend
-            npm install
-            npm audit fix --force --audit-level=critical
-            npm audit --audit-level=critical
-      - slack/notify:
-                  event: fail
-                    # mentions: "@here"
-                  template: basic_fail_1
+      # Checkout code from git
+      # Restore from cache
+      # Your job code here
+
   scan-backend:
     docker:
-      - image: cimg/node:13.8.0
+      # Docker image here
     steps:
-      - checkout
-      - restore_cache:
-          keys: [backend-deps]
-      - run:
-          name: Back-end Scan
-          command: |
-            cd backend
-            npm install
-            npm audit fix --force --audit-level=critical
-            npm audit fix --force --audit-level=critical
-            npm audit --audit-level=critical
+      # Checkout code from git
+      # Restore from cache
+      # Your job code here
+
   deploy-infrastructure:
     docker:
-      - image: cimg/base:stable
+      # Docker image here that supports AWS CLI
     steps:
-      - checkout
-      - install_awscli
+      # Checkout code from git
       - run:
           name: Ensure back-end infrastructure exists
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
-              --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7} \
-              --tags project=udacity-project
+              #--tags project=your-tag \
+              # --stack-name "your back-end stack name with workflow id" \
+              # --parameter-overrides ID="your workflow id"  
+              exit 1
       - run:
           name: Ensure front-end infrastructure exist
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
-              --tags project=udapeople \
-              --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
+              #--tags project=your-tag \
+              # --stack-name "your front-end stack name with workflow id" \
+              # --parameter-overrides ID="your workflow id"  
+              exit 1
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text)
-            echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
-            cat .circleci/ansible/inventory.txt
+            # Your code here
+            exit 1
       - persist_to_workspace:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      
-      - destroy-environment
+      # Here's where you will add some code to rollback on failure      
 
   configure-infrastructure:
     docker:
-      - image: cimg/base:stable
+      # Docker image here that supports Ansible
     steps:
-      - checkout
-      - install_awscli
-      - install_ansible
-      - add_ssh_keys:
-          fingerprints: ["e7:d8:6d:12:b7:e1:64:65:64:e2:1b:ed:fe:60:64:7b"]
-      - attach_workspace:
-          at: ~/
+      # Checkout code from git
+      # Add ssh keys with fingerprint
+      # attach workspace
+      - run:
+          name: Install dependencies
+          command: |
+            # Your code here
+            exit 1
       - run:
           name: Configure server
           command: |
-                      echo
-                      cat .circleci/ansible/inventory.txt
-                      echo
-                      ansible-playbook \
-                      -i .circleci/ansible/inventory.txt \
-                      .circleci/ansible/configure-server.yml
-      - destroy-environment
+            # Your code here
+            exit 1
+      # Here's where you will add some code to rollback on failure      
 
   run-migrations:
     docker:
-      - image: cimg/node:13.8.0
+      # Docker image here that supports NodeJS
     steps:
-      - checkout
-      - install_awscli
+      # Checkout code from git
       - run:
           name: Run migrations
           command: |
-            cd backend
-            npm install
-            npm run migrations > migrations_dump.txt
-     
+            # Your code here
+            exit 1
       - run:
-          name: Send migration status to kvdb.io
+          name: Send migration results to memstash
           command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
-            then
-               curl https://kvdb.io/DvbQjFzscLcqXo7v8JL9Rj/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-            fi
-      - destroy-environment
-      - revert-migrations
+            # Your code here
+            exit 1
+     # Here's where you will add some code to rollback on failure      
 
   deploy-frontend:
     docker:
-      - image: cimg/base:stable
+      # Docker image here that supports AWS CLI
     steps:
-      - checkout
-      - install_awscli
-      - install_nodejs
-      - restore_cache:
-         keys: [frontend-deps]
+      # Checkout code from git
       - run:
           name: Install dependencies
           command: |
-            cd frontend
-            npm install
+            # your code here
       - run:
           name: Get backend url
           command: |
-            BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text)
-            export API_URL="http://${BACKEND_PUBLIC_IP}:3030"
+            # your code here
+            export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
-            echo API_URL="http://${BACKEND_PUBLIC_IP}:3030" >> frontend/.env
-            cat frontend/.env
       - run:
           name: Deploy frontend objects
           command: |
-            cd frontend
-            npm run build
-            cat .env
-            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - destroy-environment
-      - revert-migrations
-
+            # your code here
+      # Here's where you will add some code to rollback on failure      
+                    
   deploy-backend:
     docker:
-      - image: python:3.7-alpine3.11
+      # Docker image here that supports Ansible
     steps:
-      - checkout
-      - add_ssh_keys:
-          fingerprints: ["e7:d8:6d:12:b7:e1:64:65:64:e2:1b:ed:fe:60:64:7b"]
-      - attach_workspace:
-          at: ~/
+      # Checkout code from git
+      # Add ssh keys with fingerprint
+      # attach workspace
       - run:
           name: Install dependencies
           command: |
-            # install the dependencies needed for your playbook
-            apk add --update openssh-client
-            apk add --update tar gzip ansible nodejs npm curl
-            apk update pip3
-            pip3 install awscli
+            # your code here
       - run:
-          name: taring the backend file
+          name: Deploy backend
           command: |
-            touch .env
-            echo ENVIROMENT=production > .env
-            echo NODE_ENV=production >> .env
-            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> .env
-            echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> .env
-            echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> .env
-            echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> .env
-            echo TYPEORM_HOST=$TYPEORM_HOST >> .env
-            echo TYPEORM_PORT=$TYPEORM_PORT >> .env
-            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> .env
-            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> .env
-            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> .env
-            ls -lart
-            cat .env
-            mv .env backend
-            tar -C backend -czvf artifact.tar.gz .
-      - store_artifacts:
-          path: ~/project/artifact.tar.gz
-      - run:  
-          name: invoke ansible script
-          command: |
-            cd .circleci/ansible
-            cat ~/project/.circleci/ansible/inventory.txt
-            ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -i ~/project/.circleci/ansible/inventory.txt deploy-backend.yml       
-      - destroy-environment
-      - revert-migrations
-  
+            # your code here
+      # Here's where you will add some code to rollback on failure  
+
   smoke-test:
     docker:
-      - image: cimg/base:stable
+      # Lightweight Docker image 
     steps:
-      - checkout
-      - install_awscli
-      - install_nodejs
+      # Checkout code from git
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
+      - run:
+          name: Get backend url
+          command: |
+            # your code here
       - run:
           name: Backend smoke test.
           command: |
-            BACKEND_IP=$(aws ec2 describe-instances \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "${API_URL}"
-            if curl "${API_URL}/api/status" | grep "ok"
-            then
-                exit 0
-            else
-                exit 1
-            fi
+            # your code here
       - run:
           name: Frontend smoke test.
           command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-            echo ${URL} 
-            if curl -s ${URL} | grep "Welcome"
-            then
-              exit 0
-            else
-              exit 1
-            fi
-      - destroy-environment
-      - revert-migrations
-  
+            # your code here
+      # Here's where you will add some code to rollback on failure  
+
   cloudfront-update:
     docker:
-      - image: cimg/base:stable
+      # Docker image here that supports AWS CLI
     steps:
-      - checkout
-      - install_awscli
-      # install_nodejs
+      # Checkout code from git
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
       - run:
           name: Update cloudfront distribution
           command: |
-            aws cloudformation deploy \
-             --template-file .circleci/files/cloudfront.yml \
-             --stack-name InitialStack \
-             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
-             --tags project=udapeople
-          echo Current WorkFlowID: "${CIRCLE_WORKFLOW_ID:0:7}"
-      - destroy-environment
-      - revert-migrations
-  
-  cleanup:
+            # your code here
+      # Here's where you will add some code to rollback on failure  
+
+cleanup:
     docker:
-      - image: cimg/base:stable
+      # Docker image here
     steps:
-      - checkout
-      - install_awscli
+      # Checkout code from git
       - run:
-          name: Fetch old stack workflow id
+          name: Get old stack workflow id
           command: |
-            export OldWorkflowID=$(aws cloudformation \
-            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-            --no-paginate --output text)
-            echo OldWorkflowID: "${OldWorkflowID}"
-            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-            # fetch all stacks names   
-            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-            --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
-            
-            echo Stack names: "${STACKS[@]}"    
-            
+            # your code here
+            export OldWorkflowID="the id here"
+            export STACKS=[] #put the list of stacks here
+      - run:
+          name: Remove old stacks and files
+          command: |
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
-            echo "=============delete confirmed======================="
-            aws s3 rm s3://udapeople-${OldWorkflowID} --recursive
-            aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-            aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-            else
-            echo "==============cannot cleanup========================"
-            echo "no stacks found"
+              # your code here
             fi
+            
+
 workflows:
   default:
     jobs:
@@ -420,12 +309,11 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
-          context: slack_bot
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [master]
+              only: [test-feature-branch]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
@@ -438,5 +326,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      #- cleanup:
-          #requires: [cloudfront-update]
+      - cleanup:
+          requires: [cloudfront-update]
