--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,21 +68,33 @@ jobs:
           paths: [backend/node_modules]
           key: backend-build
 
-  test-frontend:
+    test-frontend:
     docker:
-      # Docker image here
+      - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
-      # Restore from cache
-      # Your job code here
-                
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Run Test for Frontend
+          command: |
+            cd frontend
+            npm install
+            npm run test
+
   test-backend:
     docker:
-      # Docker image here
+      - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
-      # Restore from cache
-      # Your job code here
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Run Test for Backend
+          command: |
+            cd backend
+            npm install
+            npm run test
             
   scan-frontend:
     docker:
