--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,7 +126,7 @@ jobs:
             cd backend
             npm install
             npm audit fix --audit-level=critical --force
-
+# amazon cli
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
@@ -174,6 +174,7 @@ jobs:
             - project/.circleci/ansible/inventory.txt
 
       - destroy-environment
+
 
   configure-infrastructure:
     docker:
